# daily-finance-auto

./: .gitignore  README.md  config.example.yaml  pyproject.toml
.claude/: settings.md
.sessions/: README.md  session-2026-02-14-openclaw-opencode.json
docs/: heartbeat-config.yaml  美以-伊冲突投资策略分析.md
docs/plans/: 2026-02-14-openclaw-opencode-automation-design.md  2026-02-28-finance-automation-implementation.md  2026-02-28-openclaw-quant-trading-master-plan.md
docs/research/: automation-money.md  data-apis.md  openclaw-opencode-finance-plan.md  openclaw-opencode-pr-guide.md  quant-platforms.md  xiaohongshu-mcp.md
skills/fund-dca/: instructions.md  skill.yaml
skills/stock-portfolio/: instructions.md  skill.yaml
src/: __init__.py  config.py  main.py
src/analyzers/: __init__.py  indicators.py
src/collectors/: __init__.py  akshare_collector.py  base.py  tushare_collector.py
src/models/: __init__.py  fund.py  signal.py  stock.py
src/notify/: __init__.py  base.py  email.py  wechat.py
src/storage/: __init__.py  database.py  fund_repo.py  stock_repo.py
src/strategies/: __init__.py  base.py  ma_deviation.py
tests/: test_collectors.py  test_storage.py  test_strategies.py
