[project]
name = "daily-finance-auto"
version = "0.1.0"
description = "每日自动化基金信息 + 股票信息采集系统"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tushare>=1.4.0",
    "akshare>=1.12.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "asyncpg>=0.29.0",
    "aiohttp>=3.9.0",
    "pyyaml>=6.0.1",
    "rich>=13.7.0",
    "apscheduler>=3.10.4",
    "pydantic>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
